force-app/main/default/objects/MessagingSession/fields/DomainURL__c.field-meta.xml
<CustomField>
    <fullName>DomainURL__c</fullName>
    <label>Domain URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>