force-app/main/default/objects/MessagingSession/fields/IsCartMgmtSupported__c.field-meta.xml
<CustomField>
    <fullName>IsCartMgmtSupported__c</fullName>
    <label>Is Cart Mgmt Supported</label>
    <length>255</length>
    <type>Text</type>
</CustomField>