force-app/main/default/objects/MessagingSession/fields/OrganizationID__c.field-meta.xml
<CustomField>
    <fullName>OrganizationID__c</fullName>
    <label>Organization ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>