force-app/main/default/objects/MessagingSession/fields/QueryFacets__c.field-meta.xml
<CustomField>
    <fullName>QueryFacets__c</fullName>
    <label>Query Facets</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>