force-app/main/default/objects/MessagingSession/fields/SiteID__c.field-meta.xml
<CustomField>
    <fullName>SiteID__c</fullName>
    <label>Site ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>