force-app/main/default/objects/MessagingSession/fields/UserLocale__c.field-meta.xml
<CustomField>
    <fullName>UserLocale__c</fullName>
    <label>User Locale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>