force-app/main/default/objects/MessagingSession/fields/UsId__c.field-meta.xml
<CustomField>
    <fullName>UsId__c</fullName>
    <label>Us Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>